# genai-evals

./: .pre-commit-config.yaml  README.md  action.yaml  pyproject.toml  tox.ini
.github/.test_files/: eval-input.jsonl
.github/workflows/: pre-commit.yaml  run-tests.yaml  test-ai-evaluation.yaml
src/ai_evaluate_action/: __main__.py  config.py  summarize.py  summary.md.jinja
